Salesforce Training org/objects/Bypass_Logic__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Bypass_Flows__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bypass_Flows</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bypass_Lookup_Field_Filter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bypass Lookup Field Filter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bypass_Process_Builder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bypass Process Builder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bypass_Triggers__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bypass_Triggers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bypass_Validation_Rule__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bypass Validation Rule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bypass_Workflow_Rule__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bypass Workflow Rule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Objects_to_Bypass__c</fullName>
        <label>Objects_to_Bypass</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Bypass_Logic</label>
</CustomObject>